--- a/VGainesPortfolio/style.css
+++ b/VGainesPortfolio/style.css
@@ -7,11 +7,11 @@
 } 
  
 body { 
-    
+    background-image: url(images/bodybg.jpg);
     background-size: cover;
     font-family: 'Arial', sans-serif; 
     color: #333; 
-    background-color: #f8f9fa; 
+    background-color: #8394a7; 
     text-align: center; 
 } 
  
@@ -23,7 +23,7 @@ header {
     background-size:auto; 
     background-repeat: no-repeat;
     background-position:center;
-    background-color: #007bff; 
+    background-color: #8394a7; 
     color: rgb(0, 0, 0); 
     padding: 20px; 
 } 
@@ -45,7 +45,7 @@ header .btn:hover {
  
 /* Navigation */ 
 nav { 
-    background: #0056b3; 
+    background: #000000; 
     padding: 10px 0; 
 } 
  
@@ -73,6 +73,25 @@ section {
 h2 { 
     margin-bottom: 10px; 
 } 
+
+#aboutme{
+    
+        border: 5px solid #080000; 
+        border-radius: 4px; 
+        padding: 20px; 
+        margin: 0 auto; 
+        max-width: 600px; 
+        width: 80%; 
+        text-align: center; 
+        word-wrap: break-word; 
+        overflow-wrap: break-word; 
+        box-sizing: border-box; 
+        font-size: 24px;
+    }
+
+
+
+
  
 /* Projects Grid */ 
 .projects-grid { 
@@ -83,7 +102,7 @@ h2 {
 } 
  
 .project { 
-    background: white; 
+    background: rgb(255, 255, 255); 
     padding: 15px; 
     border-radius: 8px; 
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
@@ -99,7 +118,7 @@ footer {
     left: 0;
     right: 0;
     height: 30px;
-    background-color: #f8f9fa;
+    background-color: #000000;
     
     display: flex;
     align-items: left;
